Added radius slider

--- a/project/web_page/index.html
+++ b/project/web_page/index.html
@@ -5,22 +5,7 @@
     <meta charset="utf-8"></meta>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"></meta>
     <link rel="stylesheet" href="css/style.css"></link>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script type=text/javascript src="js/locate_city.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script>
-    $( function() {
-      $( "#slider" ).slider({
-        min: 0,
-        max: 10,
-        step: 1,
-        value: 1,
-        animate:"slow",
-        orientation:"horizontal"
-      });
-    } );
-  </script>
   </head>
   <body>
     <h1>Safety zone</h1>
@@ -32,13 +17,12 @@
     </div>
     <div>
       <p>
-        Choose safety radius:
+        Choose safety radius: <span id = "radiusValue">1</span>
       </p>
     </div>
-    <div id="slider"</div>
-    <script>
-    var value = $( "#slider" ).slider(value" );
-    alert(value)
- </script>
+    <div>
+      <input type="range" id="radiusBar" value="1" min ="1" max="10">
+    <div>
+    <script type=text/javascript src=js/slider.js></script>
   </body>
 </html>
