Binded slider to the radius of the circle

--- a/project/web_page/index.html
+++ b/project/web_page/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"></meta>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"></meta>
     <link rel="stylesheet" href="css/style.css"></link>
-    <script type=text/javascript src="js/locate_city.js"></script>
+    <script type=text/javascript src="js/initialization.js"></script>
   </head>
   <body>
     <h1>Safety zone</h1>
@@ -24,5 +24,7 @@
       <input type="range" id="radiusBar" value="1" min ="1" max="10">
     <div>
     <script type=text/javascript src=js/slider.js></script>
+    <script>
+    </script>
   </body>
 </html>
