CHange center of safe zone with click

--- a/project/web_page/index.html
+++ b/project/web_page/index.html
@@ -36,7 +36,10 @@
     <p>
     Select a point in SF by clicking on the map. Set the radius of the safety
     zone with the slider. Use the button to restore the map into the default
-    view</li>
+    view
+    </p>
+    <p>Rendering bug: If your browser is rendering white stripes inside
+      the circle, press 'Ctrl' + '0'.
     </p>
     <div id="map">
       <script asyc defer src="https://maps.googleapis.com/maps/api/js?key=
