added audio feature

--- a/project/web_page/index.html
+++ b/project/web_page/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8"></meta>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no"></meta>
   <link rel="stylesheet" href="css/style.css"></link>
-  <script type=text/javascript src="js/crime_latitude.js"></script>
-  <script type=text/javascript src="js/crime_longitude.js"></script>
+  <script type=text/javascript src="js/crimeLatitudes.js"></script>
+  <script type=text/javascript src="js/crimeLongitudes.js"></script>
   <script type=text/javascript src="js/initialization.js"></script>
 </head>
 <body>
