Added github repo href

--- a/project/web_page/index.html
+++ b/project/web_page/index.html
@@ -88,8 +88,9 @@
 
    </p>
    <p>
-    The data is prepared in a Jupyter notebook using Python
-    before being ready to be used by the application.
+    The data is prepared in a Jupyter notebook using Python.
+    All the data and source code is available at this
+    <a target="_blank" href="https://github.com/ArthurZC23/T3">temporary repository</a>.
   </p>
   </div>
   <div id="author">
