--- a/project/web_page/index.html
+++ b/project/web_page/index.html
@@ -57,7 +57,7 @@
   </div>
   <div>
     <p>
-      Choose safety radius: <span id = "radiusValue">1Km</span>
+      Choose safety radius: <span id = "radiusValue">100 m</span>
     </p>
   </div>
   <div>
