--- a/project/index.html
+++ b/project/index.html
@@ -21,7 +21,7 @@
     Welcome to Safety Zone
   </h1>
   <p>
-    In the final task (T3) of the discipline IA369, I build an interactive
+    In the final task (T3) of the discipline IA369, I buit an interactive
     visualization for inspecting the safety of the city of San Francisco.
     The application allows you to select a point in the map (please
     choose a point within San Francisco) and check if your surrounding
