--- a/project/index.html
+++ b/project/index.html
@@ -27,9 +27,8 @@
     choose a point within San Francisco) and check if your surrounding
     is safe, a place to be careful or dangerous. The danger level is
     based on crimes that occurred within a given radius of the choosing location
-    in 2016, creating
-    a security radius for him/her. The level of the threat is
-    expressed by the filling color of the circle.
+    in 2016. The level of the threat is
+    expressed by the filling color of the circle and an audio message.
   </p>
   </div>
 
