--- a/project/index.html
+++ b/project/index.html
@@ -39,11 +39,11 @@
     <li>Just select a point in SF by clicking on the map and the
     safety zone will be calculated</li>
     <li>Set the radius of the safety zone with the slider below the map.
-    You can choose among the following distances: 100 m, 250 m, 500 m, 750
+    You can choose among the following distances: 100 m, 250 m, 500 m, 750 m
     and 1 km.</li>
     <li>The application only has SF police incidents at its disposal. Thus, the
       only realiable results are those within SF borders.</li>
-    <li>In case you step out Ministeredof San Francisco territory, you can press the button
+    <li>In case you step out of San Francisco territory, you can press the button
     to recenter the map in SF</li>
     </ul>
     <p>Rendering bug: If your browser is rendering white stripes inside
