--- a/project/index.html
+++ b/project/index.html
@@ -24,8 +24,8 @@
     In the final task (T3) of the discipline IA369, I buit an interactive
     visualization for inspecting the safety of the city of San Francisco.
     The application allows you to select a point in the map (please
-    choose a point within San Francisco) and check if your surrounding
-    is safe, a place to be careful or dangerous. The danger level is
+    choose a point within San Francisco) and check if its surroundings
+    are safe, places to be careful or dangerous. The danger level is
     based on crimes that occurred within a given radius of the choosing location
     in 2016. The level of the threat is
     expressed by the filling color of the circle and an audio message.
