--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8"></meta>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no"></meta>
   <link rel="stylesheet" href="css/style.css"></link>
+  <script
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
   <script type=text/javascript src="js/crimeLatitudes.js"></script>
   <script type=text/javascript src="js/crimeLongitudes.js"></script>
   <script type=text/javascript src="js/initialization.js"></script>
