--- a/project/index.html
+++ b/project/index.html
@@ -8,8 +8,8 @@
   <script
     src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   </script>
-  <script type=text/javascript src="js/crimeLatitudes.js"></script>
-  <script type=text/javascript src="js/crimeLongitudes.js"></script>
+  <!-- <script type=text/javascript src="js/crimeLatitudes.js"></script>
+  <script type=text/javascript src="js/crimeLongitudes.js"></script> -->
   <script type=text/javascript src="js/initialization.js"></script>
 </head>
 <body>
