--- a/project/index.html
+++ b/project/index.html
@@ -9,7 +9,7 @@
   <script
     src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   </script>
-  <script type=text/javascript src="js/initialization.js"></script>
+  <script type=text/javascript src="js/scripts.js"></script>
 </head>
 <body>
     <div class="navigationBar">
@@ -63,14 +63,19 @@
   </div>
   <div>
     <input type="range" id="radiusBar" value="5" min ="1" max="5">
+    <script>
+      radiusBar.addEventListener('change', function(){
+        var value = radiusBar.value;
+        var possible_radius = ["100", "250", "500", "750", "1000"];
+        document.getElementById("radiusValue").innerHTML = possible_radius[value - 1];
+        document.getElementById("radiusValue").innerHTML += "m"
+        updateRadius(safetyCircle, possible_radius[value - 1]);
+        dangerLevel = dangerEstimation(safetyCircle.get('center'));
+        style_circle(dangerLevel);
+      });
+    </script>
   </div>
-  <script type=text/javascript src=js/slider.js></script>
-
-
-  <svg class="chart">
-  </svg>
-
-  
+  <svg class="chart"></svg>
   <div id="about">
     <h1>
       About
